# small-object-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_eval.sh
results/yolo11l/: latency_results.csv  uav0000009_03358_v.txt  uav0000073_00600_v.txt  uav0000073_04464_v.txt  uav0000077_00720_v.txt  uav0000088_00290_v.txt  uav0000119_02301_v.txt  uav0000120_04775_v.txt  uav0000161_00000_v.txt  uav0000188_00000_v.txt  uav0000201_00000_v.txt  uav0000249_00001_v.txt  uav0000249_02688_v.txt  (+5 more)
results/yolo11l-visdrone/: latency_results.csv  uav0000009_03358_v.txt  uav0000073_00600_v.txt  uav0000073_04464_v.txt  uav0000077_00720_v.txt  uav0000088_00290_v.txt  uav0000119_02301_v.txt  uav0000120_04775_v.txt  uav0000161_00000_v.txt  uav0000188_00000_v.txt  uav0000201_00000_v.txt  uav0000249_00001_v.txt  uav0000249_02688_v.txt  uav0000297_00000_v.txt  uav0000297_02761_v.txt  uav0000306_00230_v.txt  uav0000355_00001_v.txt  uav0000370_00001_v.txt
results/yolo11l-visdrone_sahi/: latency_results.csv  uav0000009_03358_v.txt  uav0000073_00600_v.txt  uav0000073_04464_v.txt  uav0000077_00720_v.txt  uav0000088_00290_v.txt  uav0000119_02301_v.txt  uav0000161_00000_v.txt  uav0000188_00000_v.txt  uav0000201_00000_v.txt  uav0000249_00001_v.txt  uav0000249_02688_v.txt  uav0000297_00000_v.txt  uav0000306_00230_v.txt  uav0000355_00001_v.txt  uav0000370_00001_v.txt
scripts/: download_files.sh  run_eval.sh
src/: download_dataset.py  download_models.py  eval_models.py  finetune_models.py  plot_results.py  print_latency_avg_std  visualize_bounding_boxes.py
(+305 files in other folders)
